hard-gists/4574656/run.log
=== Docker Run Log for 4574656 ===
Started at: Mi 29. Okt 14:44:19 CET 2025

[2025-10-29 14:44:20] START: Running container for 4574656
[2025-10-29 14:44:20] SUCCESS: Container 11d1e580cf2bc2014f1fba8f275691fd1f3ed3fff824007580b9851ab54e80eb started for 4574656
=== Container logs for 4574656 ===
  File "/snippet.py", line 40
    except Exception, err:
           ^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 4574656 ===
[2025-10-29 14:44:22] INFO: Container 11d1e580cf2bc2014f1fba8f275691fd1f3ed3fff824007580b9851ab54e80eb has stopped
